--- a/src/globals.css
+++ b/src/globals.css
@@ -13,6 +13,7 @@
   --color-primary: oklch(49.12% 0.3096 275.75);
   --color-primary-content: oklch(89.824% 0.06192 275.75);
   --color-secondary: oklch(69.71% 0.329 342.55);
+  --color-success: oklch(72.3% 0.219 149.579);
   --color-danger: oklch(57.7% 0.245 27.325);
   --color-neutral: oklch(32.1785% 0.02476 255.701624);
   --color-neutral-content: oklch(89.4994% 0.011585 252.096176);
@@ -28,6 +29,8 @@
   --size-control: 3rem;
   --space-control-x: 1rem;
   --space-control-gap: 0.5rem;
+  --space-panel-gap: 0.75rem;
+  --space-panel-padding: 1.25rem;
   --border-control: 1px;
   --shadow-card: 5px 5px 0 0 var(--color-neutral);
   --shadow-control: 0 1px 2px 0 rgb(0 0 0 / 0.05);
